TweetsClima/k8s/analyzer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analyzer
  template:
    metadata:
      labels:
        app: analyzer
    spec:
      containers:
        - name: analyzer
          image: saulcerezo/sopes1p2:analyzer-v1
