TweetsClima/k8s/analyzer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analyzer
spec:
  selector:
    app: analyzer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
