TweetsClima/k8s/go-entry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-entry
spec:
  selector:
    app: go-entry
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
