TweetsClima/k8s/rust-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-api
spec:
  selector:
    app: rust-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
